# urban-tree-transfer

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  noxfile.py  opencode.json  pyproject.toml
.github/: copilot-instructions.md
.opencode/: LESSONS.md
.opencode/commands/: python-init.md
.pi/: LESSONS.md
PRDs/: 002_phase2_feature_engineering.md  002_phase2_feature_engineering_overview.md  003_phase3_complete.md  003_phase3_experiments.md  003e_audit_fixes.md  PRD_003_Methodological_Improvements.md  README.md  exp10_jm_based_genus_grouping.md  exp_10_genus_selection.md  phase-1-data-processing-migration.md
PRDs/002_phase2/: 002_exploratory.md  002a_feature_extraction.md  002b_data_quality.md  002c_final_preparation.md  IMPLEMENTATION_PLAN.md
PRDs/done/: 002_phase2_feature_engineering_overview.md  002_phase2_feature_engineering_v1.md  PRD_002d_Methodological_Improvements.md  exp_07_cross_city_baseline.md  exp_10_genus_selection.md  phase2_code_review_fixes.md
PRDs/templates/: prd_simple.md  prp_base.md  prp_simple.md
configs/cities/: berlin.yaml  leipzig.yaml  leipzig_dgm_urls.txt  leipzig_dom_urls.txt
docs/: ARCHITECTURE.md  FOLDER_STRUCTURE.md  PROJECT.md
docs/literature/: LITERATURE.md
docs/templates/: Notebook_Templates.md  methodology_template.md
legacy/03_Experiments/: 00_Phase_0_Methodik.md  99_Methodische_Verbesserungen.md
notebooks/exploratory/: exp_01_temporal_analysis.ipynb  exp_01_temporal_analysis.py  exp_02_chm_assessment.ipynb  exp_02_chm_assessment.py  exp_03_correlation_analysis.ipynb  exp_03_correlation_analysis.py  exp_04_outlier_thresholds.ipynb  exp_04_outlier_thresholds.py  exp_05_spatial_autocorrelation.ipynb  exp_05_spatial_autocorrelation.py  exp_06_mixed_genus_proximity.ipynb  exp_06_mixed_genus_proximity.py  exp_07_cross_city_baseline.ipynb  exp_07_cross_city_baseline.py  exp_08_chm_ablation.ipynb  exp_08_chm_ablation.py  exp_08b_proximity_ablation.ipynb  exp_08b_proximity_ablation.py  (+9 more)
outputs/: README.md
scripts/: download_leipzig_trees.py  extract_pdf_simple.py  gee_sentinel_preview.js  inspect_phase2_data.py  validate_pipeline_logic.py
(+196 files in other folders)
