[project]
name = "urban-tree-transfer"
version = "0.1.0"
description = "Cross-City Transfer Learning for urban tree genus classification with Sentinel-2 satellite data"
requires-python = ">=3.10"
authors = [{ name = "Silas Pignotti" }]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "geopandas>=1.0.0",
    "rasterio>=1.4.0",
    "earthengine-api>=1.4.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pyyaml>=6.0.0",
    "pyarrow>=23.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "nox>=2024.0.0",
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "nbformat>=5.10.4",
    "nbconvert>=7.17.0",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/urban_tree_transfer"]
include = ["src/urban_tree_transfer/**/*.json"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# Include config files in the package
[tool.hatch.build.targets.sdist]
include = [
    "src/urban_tree_transfer/**/*.yaml",
    "src/urban_tree_transfer/**/*.txt",
    "src/urban_tree_transfer/**/*.json",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [".venv", "build", "dist", "legacy", "notebooks"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["urban_tree_transfer"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src"]
exclude = [".venv", "build", "dist", "notebooks"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedVariable = true
reportUnusedImport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: marks tests that hit external APIs (deselect with '-m \"not integration\"')",
]
